wrote out basic route structure

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/movie-api
+API_URL=https://imdb-internet-movie-database-unofficial.p.rapidapi.com
+KEY=examplekey
+HOST=imdb-internet-movie-database-unofficial.p.rapidapi.com
